# homeworks

./: README.md  requirements.txt  requirments.txt
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  README.md  fastapi_app.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html
homework_06/: Dockerfile  app.py  config.py  docker-compose.yml  models.py  plant_form.py  requirements.txt
homework_06/migrations/versions/: d290ce10690b_.py
homework_06/templates/: about.html  base.html  home.html
homework_06/templates/macros/: back_to_plants_list.html
homework_06/templates/plants/: add.html  details.html  plants_list.html
homework_06/templates/products/: list.html
homework_07/shop/paintings/: admin.py  models.py  views.py
homework_07/shop/paintings/migrations/: 0001_initial.py
homework_07/shop/paintings/templates/: index.html
homework_07/shop/shop/: settings.py  urls.py
homework_08/shop/paintings/: models.py  views.py
homework_08/shop/paintings/management/commands/: update_db.py
homework_08/shop/paintings/migrations/: 0002_rename_paintingmaterials_paintingmaterial.py  0003_paintingdetail.py  0004_delete_paintingdetail.py
homework_08/shop/paintings/templates/paintings/: index.html  painting_detail.html  painting_list.html
homework_08/shop/shop/: settings.py  urls.py
