[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = ""
authors = ["VekrisTizara <94655538+VekrisTizara@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
